Invalidate pseudo default state when checked and selected attributes are updated dynamically.

Added tests to check if :default selector is reflected correctly in following cases.
a)Updating type attribute of input element.
b)Updating checked status of input element.
c)Updating checked attribute of input element.
d)Updating selected status of option element.
e)Updating selected attribute of option element.

BUG=591226

Review URL: https://codereview.chromium.org/1768913002

Cr-Commit-Position: refs/heads/master@{#379743}